public class Main {

    public static void main(String[] args) {
        StreamingService user = new StreamingService();
        user.setup();
    }
}